parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIFF
    ESIGUAL
    IFELSE
    MAYORIGUAL
    MAYORQUE
    MENORIGUAL
    MENORQUE
    STRING

Grammar

Rule 0     S' -> program
Rule 1     program -> st var_dec procedure main_block FINISH
Rule 2     st -> START
Rule 3     var_dec -> DECLARATION decl ENDECLARATION
Rule 4     var_dec -> <empty>
Rule 5     decl -> type variable PUNTOYCOMA
Rule 6     decl -> decl type variable PUNTOYCOMA
Rule 7     decl -> decl dimtype PUNTOYCOMA
Rule 8     variable -> ID
Rule 9     variable -> variable COMA ID
Rule 10    type -> INT
Rule 11    type -> FLOAT
Rule 12    dimtype -> VECTOR DCLVECTOR
Rule 13    dimtype -> MATRIX DCLMATRIX
Rule 14    dimtype -> CUBE DCLCUBE
Rule 15    DCLVECTOR -> ID NUMBER
Rule 16    DCLMATRIX -> ID NUMBER NUMBER
Rule 17    DCLCUBE -> ID NUMBER NUMBER NUMBER
Rule 18    procedure -> MODULE iddd beggg stat enddd procedure
Rule 19    procedure -> <empty>
Rule 20    iddd -> ID
Rule 21    beggg -> BEGIN
Rule 22    beggg -> <empty>
Rule 23    enddd -> END
Rule 24    enddd -> <empty>
Rule 25    stat -> estatuto stat
Rule 26    stat -> <empty>
Rule 27    main_block -> MAIN be stat END
Rule 28    be -> BEGIN
Rule 29    estatuto -> CALL ID PUNTOYCOMA
Rule 30    estatuto -> IF expresion beg stat els stat END
Rule 31    estatuto -> IF expresion beg stat END
Rule 32    beg -> BEGIN
Rule 33    els -> ELSE
Rule 34    estatuto -> pid ASSIGN E PUNTOYCOMA
Rule 35    pid -> ID
Rule 36    E -> E PLUS T
Rule 37    E -> E MINUS T
Rule 38    E -> T
Rule 39    T -> T TIMES F
Rule 40    T -> T DIVIDE F
Rule 41    T -> F
Rule 42    F -> OP
Rule 43    F -> LPAR E RPAR
Rule 44    expresion -> LPAR EL RPAR
Rule 45    EL -> EL OR TL
Rule 46    EL -> TL NOT
Rule 47    EL -> TL
Rule 48    TL -> TL AND FL
Rule 49    TL -> FL
Rule 50    FL -> OP opLogico OP
Rule 51    FL -> LPAR EL LPAR
Rule 52    opLogico -> RELATIONAL
Rule 53    OP -> NUMBER
Rule 54    OP -> FLOATNUMBER
Rule 55    OP -> vec
Rule 56    vec -> ID LBRACKET NUMBER RBRACKET
Rule 57    vec -> ID LBRACKET ID RBRACKET
Rule 58    mat -> ID LBRACKET OP RBRACKET LBRACKET OP RBRACKET
Rule 59    OP -> cub
Rule 60    cub -> ID LBRACKET OP RBRACKET LBRACKET OP RBRACKET LBRACKET OP RBRACKET
Rule 61    OP -> ID
Rule 62    estatuto -> FOR expresion_for beg1 stat END
Rule 63    beg1 -> BEGIN
Rule 64    expresion_for -> LPAR id1 IN numb RPAR
Rule 65    expresion_for -> LPAR id1 IN idx RPAR
Rule 66    numb -> NUMBER
Rule 67    numb -> FLOATNUMBER
Rule 68    idx -> ID
Rule 69    id1 -> ID
Rule 70    estatuto -> WHILE expresion BB stat END
Rule 71    BB -> BEGIN
Rule 72    estatuto -> doo stat wh expresion
Rule 73    doo -> DO
Rule 74    wh -> DWHILE
Rule 75    estatuto -> OUTPUT OP PUNTOYCOMA
Rule 76    estatuto -> INPUT ID PUNTOYCOMA

Terminals, with rules where they appear

AND                  : 48
ASSIGN               : 34
BEGIN                : 21 28 32 63 71
CALL                 : 29
COMA                 : 9
CUBE                 : 14
DECLARATION          : 3
DIFF                 : 
DIVIDE               : 40
DO                   : 73
DWHILE               : 74
ELSE                 : 33
END                  : 23 27 30 31 62 70
ENDECLARATION        : 3
ESIGUAL              : 
FINISH               : 1
FLOAT                : 11
FLOATNUMBER          : 54 67
FOR                  : 62
ID                   : 8 9 15 16 17 20 29 35 56 57 57 58 60 61 68 69 76
IF                   : 30 31
IFELSE               : 
IN                   : 64 65
INPUT                : 76
INT                  : 10
LBRACKET             : 56 57 58 58 60 60 60
LPAR                 : 43 44 51 51 64 65
MAIN                 : 27
MATRIX               : 13
MAYORIGUAL           : 
MAYORQUE             : 
MENORIGUAL           : 
MENORQUE             : 
MINUS                : 37
MODULE               : 18
NOT                  : 46
NUMBER               : 15 16 16 17 17 17 53 56 66
OR                   : 45
OUTPUT               : 75
PLUS                 : 36
PUNTOYCOMA           : 5 6 7 29 34 75 76
RBRACKET             : 56 57 58 58 60 60 60
RELATIONAL           : 52
RPAR                 : 43 44 64 65
START                : 2
STRING               : 
TIMES                : 39
VECTOR               : 12
WHILE                : 70
error                : 

Nonterminals, with rules where they appear

BB                   : 70
DCLCUBE              : 14
DCLMATRIX            : 13
DCLVECTOR            : 12
E                    : 34 36 37 43
EL                   : 44 45 51
F                    : 39 40 41
FL                   : 48 49
OP                   : 42 50 50 58 58 60 60 60 75
T                    : 36 37 38 39 40
TL                   : 45 46 47 48
be                   : 27
beg                  : 30 31
beg1                 : 62
beggg                : 18
cub                  : 59
decl                 : 3 6 7
dimtype              : 7
doo                  : 72
els                  : 30
enddd                : 18
estatuto             : 25
expresion            : 30 31 70 72
expresion_for        : 62
id1                  : 64 65
iddd                 : 18
idx                  : 65
main_block           : 1
mat                  : 
numb                 : 64
opLogico             : 50
pid                  : 34
procedure            : 1 18
program              : 0
st                   : 1
stat                 : 18 25 27 30 30 31 62 70 72
type                 : 5 6
var_dec              : 1
variable             : 5 6 9
vec                  : 55
wh                   : 72

Parsing method: SLR

state 0

    (0) S' -> . program
    (1) program -> . st var_dec procedure main_block FINISH
    (2) st -> . START

    START           shift and go to state 3

    program                        shift and go to state 1
    st                             shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> st . var_dec procedure main_block FINISH
    (3) var_dec -> . DECLARATION decl ENDECLARATION
    (4) var_dec -> .

    DECLARATION     shift and go to state 5
    MODULE          reduce using rule 4 (var_dec -> .)
    MAIN            reduce using rule 4 (var_dec -> .)

    var_dec                        shift and go to state 4

state 3

    (2) st -> START .

    DECLARATION     reduce using rule 2 (st -> START .)
    MODULE          reduce using rule 2 (st -> START .)
    MAIN            reduce using rule 2 (st -> START .)


state 4

    (1) program -> st var_dec . procedure main_block FINISH
    (18) procedure -> . MODULE iddd beggg stat enddd procedure
    (19) procedure -> .

    MODULE          shift and go to state 7
    MAIN            reduce using rule 19 (procedure -> .)

    procedure                      shift and go to state 6

state 5

    (3) var_dec -> DECLARATION . decl ENDECLARATION
    (5) decl -> . type variable PUNTOYCOMA
    (6) decl -> . decl type variable PUNTOYCOMA
    (7) decl -> . decl dimtype PUNTOYCOMA
    (10) type -> . INT
    (11) type -> . FLOAT

    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    decl                           shift and go to state 8
    type                           shift and go to state 9

state 6

    (1) program -> st var_dec procedure . main_block FINISH
    (27) main_block -> . MAIN be stat END

    MAIN            shift and go to state 13

    main_block                     shift and go to state 12

state 7

    (18) procedure -> MODULE . iddd beggg stat enddd procedure
    (20) iddd -> . ID

    ID              shift and go to state 15

    iddd                           shift and go to state 14

state 8

    (3) var_dec -> DECLARATION decl . ENDECLARATION
    (6) decl -> decl . type variable PUNTOYCOMA
    (7) decl -> decl . dimtype PUNTOYCOMA
    (10) type -> . INT
    (11) type -> . FLOAT
    (12) dimtype -> . VECTOR DCLVECTOR
    (13) dimtype -> . MATRIX DCLMATRIX
    (14) dimtype -> . CUBE DCLCUBE

    ENDECLARATION   shift and go to state 16
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    VECTOR          shift and go to state 19
    MATRIX          shift and go to state 20
    CUBE            shift and go to state 21

    type                           shift and go to state 17
    dimtype                        shift and go to state 18

state 9

    (5) decl -> type . variable PUNTOYCOMA
    (8) variable -> . ID
    (9) variable -> . variable COMA ID

    ID              shift and go to state 23

    variable                       shift and go to state 22

state 10

    (10) type -> INT .

    ID              reduce using rule 10 (type -> INT .)


state 11

    (11) type -> FLOAT .

    ID              reduce using rule 11 (type -> FLOAT .)


state 12

    (1) program -> st var_dec procedure main_block . FINISH

    FINISH          shift and go to state 24


state 13

    (27) main_block -> MAIN . be stat END
    (28) be -> . BEGIN

    BEGIN           shift and go to state 26

    be                             shift and go to state 25

state 14

    (18) procedure -> MODULE iddd . beggg stat enddd procedure
    (21) beggg -> . BEGIN
    (22) beggg -> .

    BEGIN           shift and go to state 28
    CALL            reduce using rule 22 (beggg -> .)
    IF              reduce using rule 22 (beggg -> .)
    FOR             reduce using rule 22 (beggg -> .)
    WHILE           reduce using rule 22 (beggg -> .)
    OUTPUT          reduce using rule 22 (beggg -> .)
    INPUT           reduce using rule 22 (beggg -> .)
    ID              reduce using rule 22 (beggg -> .)
    DO              reduce using rule 22 (beggg -> .)
    END             reduce using rule 22 (beggg -> .)
    MODULE          reduce using rule 22 (beggg -> .)
    MAIN            reduce using rule 22 (beggg -> .)

    beggg                          shift and go to state 27

state 15

    (20) iddd -> ID .

    BEGIN           reduce using rule 20 (iddd -> ID .)
    CALL            reduce using rule 20 (iddd -> ID .)
    IF              reduce using rule 20 (iddd -> ID .)
    FOR             reduce using rule 20 (iddd -> ID .)
    WHILE           reduce using rule 20 (iddd -> ID .)
    OUTPUT          reduce using rule 20 (iddd -> ID .)
    INPUT           reduce using rule 20 (iddd -> ID .)
    ID              reduce using rule 20 (iddd -> ID .)
    DO              reduce using rule 20 (iddd -> ID .)
    END             reduce using rule 20 (iddd -> ID .)
    MODULE          reduce using rule 20 (iddd -> ID .)
    MAIN            reduce using rule 20 (iddd -> ID .)


state 16

    (3) var_dec -> DECLARATION decl ENDECLARATION .

    MODULE          reduce using rule 3 (var_dec -> DECLARATION decl ENDECLARATION .)
    MAIN            reduce using rule 3 (var_dec -> DECLARATION decl ENDECLARATION .)


state 17

    (6) decl -> decl type . variable PUNTOYCOMA
    (8) variable -> . ID
    (9) variable -> . variable COMA ID

    ID              shift and go to state 23

    variable                       shift and go to state 29

state 18

    (7) decl -> decl dimtype . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 30


state 19

    (12) dimtype -> VECTOR . DCLVECTOR
    (15) DCLVECTOR -> . ID NUMBER

    ID              shift and go to state 32

    DCLVECTOR                      shift and go to state 31

state 20

    (13) dimtype -> MATRIX . DCLMATRIX
    (16) DCLMATRIX -> . ID NUMBER NUMBER

    ID              shift and go to state 34

    DCLMATRIX                      shift and go to state 33

state 21

    (14) dimtype -> CUBE . DCLCUBE
    (17) DCLCUBE -> . ID NUMBER NUMBER NUMBER

    ID              shift and go to state 36

    DCLCUBE                        shift and go to state 35

state 22

    (5) decl -> type variable . PUNTOYCOMA
    (9) variable -> variable . COMA ID

    PUNTOYCOMA      shift and go to state 37
    COMA            shift and go to state 38


state 23

    (8) variable -> ID .

    PUNTOYCOMA      reduce using rule 8 (variable -> ID .)
    COMA            reduce using rule 8 (variable -> ID .)


state 24

    (1) program -> st var_dec procedure main_block FINISH .

    $end            reduce using rule 1 (program -> st var_dec procedure main_block FINISH .)


state 25

    (27) main_block -> MAIN be . stat END
    (25) stat -> . estatuto stat
    (26) stat -> .
    (29) estatuto -> . CALL ID PUNTOYCOMA
    (30) estatuto -> . IF expresion beg stat els stat END
    (31) estatuto -> . IF expresion beg stat END
    (34) estatuto -> . pid ASSIGN E PUNTOYCOMA
    (62) estatuto -> . FOR expresion_for beg1 stat END
    (70) estatuto -> . WHILE expresion BB stat END
    (72) estatuto -> . doo stat wh expresion
    (75) estatuto -> . OUTPUT OP PUNTOYCOMA
    (76) estatuto -> . INPUT ID PUNTOYCOMA
    (35) pid -> . ID
    (73) doo -> . DO

    END             reduce using rule 26 (stat -> .)
    MODULE          reduce using rule 26 (stat -> .)
    MAIN            reduce using rule 26 (stat -> .)
    ELSE            reduce using rule 26 (stat -> .)
    DWHILE          reduce using rule 26 (stat -> .)
    CALL            shift and go to state 41
    IF              shift and go to state 43
    FOR             shift and go to state 45
    WHILE           shift and go to state 46
    OUTPUT          shift and go to state 48
    INPUT           shift and go to state 49
    ID              shift and go to state 42
    DO              shift and go to state 50

    stat                           shift and go to state 39
    estatuto                       shift and go to state 40
    pid                            shift and go to state 44
    doo                            shift and go to state 47

state 26

    (28) be -> BEGIN .

    CALL            reduce using rule 28 (be -> BEGIN .)
    IF              reduce using rule 28 (be -> BEGIN .)
    FOR             reduce using rule 28 (be -> BEGIN .)
    WHILE           reduce using rule 28 (be -> BEGIN .)
    OUTPUT          reduce using rule 28 (be -> BEGIN .)
    INPUT           reduce using rule 28 (be -> BEGIN .)
    ID              reduce using rule 28 (be -> BEGIN .)
    DO              reduce using rule 28 (be -> BEGIN .)
    END             reduce using rule 28 (be -> BEGIN .)


state 27

    (18) procedure -> MODULE iddd beggg . stat enddd procedure
    (25) stat -> . estatuto stat
    (26) stat -> .
    (29) estatuto -> . CALL ID PUNTOYCOMA
    (30) estatuto -> . IF expresion beg stat els stat END
    (31) estatuto -> . IF expresion beg stat END
    (34) estatuto -> . pid ASSIGN E PUNTOYCOMA
    (62) estatuto -> . FOR expresion_for beg1 stat END
    (70) estatuto -> . WHILE expresion BB stat END
    (72) estatuto -> . doo stat wh expresion
    (75) estatuto -> . OUTPUT OP PUNTOYCOMA
    (76) estatuto -> . INPUT ID PUNTOYCOMA
    (35) pid -> . ID
    (73) doo -> . DO

    END             reduce using rule 26 (stat -> .)
    MODULE          reduce using rule 26 (stat -> .)
    MAIN            reduce using rule 26 (stat -> .)
    ELSE            reduce using rule 26 (stat -> .)
    DWHILE          reduce using rule 26 (stat -> .)
    CALL            shift and go to state 41
    IF              shift and go to state 43
    FOR             shift and go to state 45
    WHILE           shift and go to state 46
    OUTPUT          shift and go to state 48
    INPUT           shift and go to state 49
    ID              shift and go to state 42
    DO              shift and go to state 50

    stat                           shift and go to state 51
    estatuto                       shift and go to state 40
    pid                            shift and go to state 44
    doo                            shift and go to state 47

state 28

    (21) beggg -> BEGIN .

    CALL            reduce using rule 21 (beggg -> BEGIN .)
    IF              reduce using rule 21 (beggg -> BEGIN .)
    FOR             reduce using rule 21 (beggg -> BEGIN .)
    WHILE           reduce using rule 21 (beggg -> BEGIN .)
    OUTPUT          reduce using rule 21 (beggg -> BEGIN .)
    INPUT           reduce using rule 21 (beggg -> BEGIN .)
    ID              reduce using rule 21 (beggg -> BEGIN .)
    DO              reduce using rule 21 (beggg -> BEGIN .)
    END             reduce using rule 21 (beggg -> BEGIN .)
    MODULE          reduce using rule 21 (beggg -> BEGIN .)
    MAIN            reduce using rule 21 (beggg -> BEGIN .)


state 29

    (6) decl -> decl type variable . PUNTOYCOMA
    (9) variable -> variable . COMA ID

    PUNTOYCOMA      shift and go to state 52
    COMA            shift and go to state 38


state 30

    (7) decl -> decl dimtype PUNTOYCOMA .

    ENDECLARATION   reduce using rule 7 (decl -> decl dimtype PUNTOYCOMA .)
    INT             reduce using rule 7 (decl -> decl dimtype PUNTOYCOMA .)
    FLOAT           reduce using rule 7 (decl -> decl dimtype PUNTOYCOMA .)
    VECTOR          reduce using rule 7 (decl -> decl dimtype PUNTOYCOMA .)
    MATRIX          reduce using rule 7 (decl -> decl dimtype PUNTOYCOMA .)
    CUBE            reduce using rule 7 (decl -> decl dimtype PUNTOYCOMA .)


state 31

    (12) dimtype -> VECTOR DCLVECTOR .

    PUNTOYCOMA      reduce using rule 12 (dimtype -> VECTOR DCLVECTOR .)


state 32

    (15) DCLVECTOR -> ID . NUMBER

    NUMBER          shift and go to state 53


state 33

    (13) dimtype -> MATRIX DCLMATRIX .

    PUNTOYCOMA      reduce using rule 13 (dimtype -> MATRIX DCLMATRIX .)


state 34

    (16) DCLMATRIX -> ID . NUMBER NUMBER

    NUMBER          shift and go to state 54


state 35

    (14) dimtype -> CUBE DCLCUBE .

    PUNTOYCOMA      reduce using rule 14 (dimtype -> CUBE DCLCUBE .)


state 36

    (17) DCLCUBE -> ID . NUMBER NUMBER NUMBER

    NUMBER          shift and go to state 55


state 37

    (5) decl -> type variable PUNTOYCOMA .

    ENDECLARATION   reduce using rule 5 (decl -> type variable PUNTOYCOMA .)
    INT             reduce using rule 5 (decl -> type variable PUNTOYCOMA .)
    FLOAT           reduce using rule 5 (decl -> type variable PUNTOYCOMA .)
    VECTOR          reduce using rule 5 (decl -> type variable PUNTOYCOMA .)
    MATRIX          reduce using rule 5 (decl -> type variable PUNTOYCOMA .)
    CUBE            reduce using rule 5 (decl -> type variable PUNTOYCOMA .)


state 38

    (9) variable -> variable COMA . ID

    ID              shift and go to state 56


state 39

    (27) main_block -> MAIN be stat . END

    END             shift and go to state 57


state 40

    (25) stat -> estatuto . stat
    (25) stat -> . estatuto stat
    (26) stat -> .
    (29) estatuto -> . CALL ID PUNTOYCOMA
    (30) estatuto -> . IF expresion beg stat els stat END
    (31) estatuto -> . IF expresion beg stat END
    (34) estatuto -> . pid ASSIGN E PUNTOYCOMA
    (62) estatuto -> . FOR expresion_for beg1 stat END
    (70) estatuto -> . WHILE expresion BB stat END
    (72) estatuto -> . doo stat wh expresion
    (75) estatuto -> . OUTPUT OP PUNTOYCOMA
    (76) estatuto -> . INPUT ID PUNTOYCOMA
    (35) pid -> . ID
    (73) doo -> . DO
